# nglui

./:  .bumpversion.cfg  .bmv-post-commit.sh  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE.license  MANIFEST.in  README.md  changelog.md  cloudbuild.yaml  extensible_viewer_example.py  index.html  manager_example.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  sitemap.xml  test_requirements.txt  uwsgi.ini  viewer_setup_example.py
-/: LICENSE.txt  README.md  pyproject.toml
-/src/_/: __about__.py  __init__.py
.github/workflows/: mkdocs_publish.yml  python-package.yml
changelog/: index.html
data/: get_default_neuroglancer_key_commands.py
docs/: _quarto.yml  _sidebar.yml  changelog.md  conf.py  index.md  index.rst  objects.json
docs/_site/: about.html  index.html  search.json
docs/_site/reference/: AnnotationLayerConfig.html  ChainedStateBuilder.html  ImageLayerConfig.html  SegmentationLayerConfig.html  get_object.html  index.html  layers.AnnotationLayerConfig.html  layers.ImageLayerConfig.html  layers.SegmentationLayerConfig.html  layers.html  nglui.statebuilder.layers.AnnotationLayerConfig.html  nglui.statebuilder.layers.ImageLayerConfig.html  nglui.statebuilder.layers.LayerConfigBase.html  nglui.statebuilder.layers.SegmentationLayerConfig.html  nglui.statebuilder.statebuilder.StateBuilder.initialize_state.html  nglui.statebuilder.statebuilder.StateBuilder.render_state.html  parser.base.annotation_dataframe.html  parser.base.annotation_layers.html  parser.base.extract_multicut.html  parser.base.get_layer.html  parser.base.get_selected_ids.html  parser.base.group_annotations.html  parser.base.image_layers.html  parser.base.layer_names.html  parser.base.line_annotations.html  parser.base.point_annotations.html  (+26 more)
docs/api/: modules.rst  neuroglancer_annotation_ui.rst  neuroglancer_annotation_ui.statebuilder.rst
docs/guide/: intro.rst
docs/reference/: ChainedStateBuilder.qmd  ImageLayerConfig.qmd  _api_index.qmd  easyviewer.md  get_object.qmd  helpers.md  index.qmd  layers.AnnotationLayerConfig.qmd  layers.ImageLayerConfig.qmd  layers.SegmentationLayerConfig.qmd  layers.qmd  ngl_annotations.md  ngl_components.md  nglui.statebuilder.layers.AnnotationLayerConfig.qmd  nglui.statebuilder.layers.LayerConfigBase.qmd  nglui.statebuilder.layers.SegmentationLayerConfig.qmd  nglui.statebuilder.statebuilder.StateBuilder.initialize_state.qmd  nglui.statebuilder.statebuilder.StateBuilder.render_state.qmd  parser.base.annotation_dataframe.qmd  parser.base.annotation_layers.qmd  parser.base.extract_multicut.qmd  parser.base.get_layer.qmd  parser.base.get_selected_ids.qmd  parser.base.group_annotations.qmd  parser.base.image_layers.qmd  parser.base.layer_names.qmd  parser.base.line_annotations.qmd  parser.base.point_annotations.qmd  parser.base.segmentation_layers.qmd  parser.base.sphere_annotations.qmd  parser.base.tag_dictionary.qmd  parser.base.view_settings.qmd  parser.md  precomputed.md  precomputed_dataframe_writer.md  precomputed_writer.md  preview.qmd  segmentprops.md  shaders.md  site_utils.md  (+23 more)
docs/tutorials/: index.qmd  parser.qmd  statebuilder.qmd
docs/usage/: config.md  index.md  parser.md  segmentprops.md  segprops.md  shaders.md  skeletons.md  statebuilder.md
examples/: basic_extension_example.py  cell_type_extension_generic.py  dash_example_data.h5  dash_with_statebuilder.py  example_data.h5  example_dataframes.h5  example_extensions.py  extension_template.py  manager_example_state_based_synapse.py  secret_config.py  spatial_annotator.py  sphere_dropper.py  state_builder_example.ipynb  state_builder_examples.ipynb  state_list_browser_example.py  statebuilder_examples.ipynb  synapse_getter_example.py  synapse_getter_extension.py
examples/outdated/: temp_point_file.json
neuroglancer_annotation_ui/: __init__.py  annotation.py  base.py  cell_type_extension.py  cell_type_point_extension.py  connections.py  connector_extension.py  extensible_viewer.py  extension_core.py  extension_example.py  get_synapses_extensions.py  interface.py  ngl_rendering.py  skeletons.py  soma_extension.py  spatial_annotator.py  synapse_extension.py  thin_interface.py
neuroglancer_annotation_ui/data/: default_key_bindings.json
reference/easyviewer/: index.html
reference/helpers/: index.html
reference/ngl_annotations/: index.html
reference/ngl_components/: index.html
reference/parser/: index.html
reference/segmentprops/: index.html
reference/shaders/: index.html
reference/site_utils/: index.html
reference/skeletons/: index.html
reference/statebuilder/: index.html
scripts/: 180907_sd_skeletons.ipynb
search/: search_index.json
src/neuroglancer_annotation_server/: __init__.py  config.py  forms.py  nglaunch.py  ui_tool_setup.py
src/neuroglancer_annotation_ui/: __init__.py  annotation.py  base.py  cell_type_getter.py  cell_type_point_extension.py  extension_core.py  get_synapses_extensions.py  ngl_rendering.py  soma_extension.py  sphere_dropper_extension.py  state_list_browser_extension.py  synapse_extension.py  synapse_getter.py  utils.py
src/nglui/: __init__.py  site_utils.py  target_utils.py  utils.py
tests/: conftest.py  test_additional_base.py  test_additional_ngl_components.py  test_annotations.py  test_base.py  test_cell_type_extension.py  test_connections.py  test_default_config.py  test_engine.py  test_interface.py  test_ngl_annotations.py  test_ngl_components.py  test_parser.py  test_precomputed.py  test_pyarrow_conversion.py  test_sb_helpers.py  test_segment_props.py  test_shaders.py  test_site_utils.py  test_soma_extension.py  test_statebuilder.py  test_synapse_extension.py  test_utils.py  test_viewer.py
tests/testdata/: post_df_helper.feather  post_syn_data.feather  pre_df_helper.feather  pre_syn_data.feather  soma_data.feather  test_state.json
usage/: index.html
usage/config/: index.html
usage/parser/: index.html
usage/segmentprops/: index.html
usage/skeletons/: index.html
usage/statebuilder/: index.html
(+93 files in other folders)
